@@ -19,12 +19,12 @@ package org.jackhuang.hmcl.setting;
 
 import javafx.beans.InvalidationListener;
 import org.jackhuang.hmcl.util.StringUtils;
+import org.jackhuang.hmcl.util.io.NetworkUtils;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.IOException;
 import java.net.*;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -33,8 +33,15 @@ import static org.jackhuang.hmcl.util.logging.Logger.LOG;
 
 public final class ProxyManager {
 
-    private static final ProxySelector NO_PROXY = new SimpleProxySelector(Proxy.NO_PROXY);
-    private static final ProxySelector SYSTEM_DEFAULT = Objects.requireNonNullElse(ProxySelector.getDefault(), NO_PROXY);
+    private static final SimpleProxySelector NO_PROXY = new SimpleProxySelector(Proxy.NO_PROXY);
+    private static final ProxySelector SYSTEM_DEFAULT;
+
+    static {
+        ProxySelector systemProxySelector = ProxySelector.getDefault();
+        SYSTEM_DEFAULT = systemProxySelector != null
+                ? new ProxySelectorWrapper(systemProxySelector)
+                : NO_PROXY;
+    }
 
     private static volatile @NotNull ProxySelector defaultProxySelector = SYSTEM_DEFAULT;
     private static volatile @Nullable SimpleAuthenticator defaultAuthenticator = null;
@@ -51,7 +58,7 @@ public final class ProxyManager {
                 LOG.warning("Illegal proxy port: " + port);
                 return NO_PROXY;
             } else {
-                return new SimpleProxySelector(new Proxy(proxyType, new InetSocketAddress(host, port)));
+                return new ProxySelectorWrapper(new SimpleProxySelector(new Proxy(proxyType, new InetSocketAddress(host, port))));
             }
         } else {
             return ProxyManager.SYSTEM_DEFAULT;
@@ -64,7 +71,10 @@ public final class ProxyManager {
             String password = config().getProxyPass();
 
             if (username != null || password != null)
-                return new SimpleAuthenticator(username, password.toCharArray());
+                return new SimpleAuthenticator(
+                        Objects.requireNonNullElse(username, ""),
+                        Objects.requireNonNullElse(password, "").toCharArray()
+                );
             else
                 return null;
         } else
@@ -106,15 +116,41 @@ public final class ProxyManager {
         config().proxyPassProperty().addListener(updateAuthenticator);
     }
 
-    private static final class SimpleProxySelector extends ProxySelector {
+    private static abstract class AbstractProxySelector extends ProxySelector {
+        @Override
+        public void connectFailed(URI uri, SocketAddress sa, IOException ioe) {
+            if (uri == null || sa == null || ioe == null) {
+                throw new IllegalArgumentException("Arguments can't be null.");
+            }
+        }
+    }
+
+    private static final class SimpleProxySelector extends AbstractProxySelector {
         private final List<Proxy> proxies;
 
         SimpleProxySelector(Proxy proxy) {
-            this(Collections.singletonList(proxy));
+            this.proxies = List.of(proxy);
         }
 
-        SimpleProxySelector(List<Proxy> proxies) {
-            this.proxies = proxies;
+        @Override
+        public List<Proxy> select(URI uri) {
+            if (uri == null)
+                throw new IllegalArgumentException("URI can't be null.");
+            return proxies;
+        }
+
+        @Override
+        public String toString() {
+            return "SimpleProxySelector" + proxies;
+        }
+    }
+
+    /// Wraps another ProxySelector to avoid using proxy for loopback addresses.
+    private static final class ProxySelectorWrapper extends AbstractProxySelector {
+        private final ProxySelector source;
+
+        ProxySelectorWrapper(ProxySelector source) {
+            this.source = source;
         }
 
         @Override
@@ -122,19 +158,10 @@ public final class ProxyManager {
             if (uri == null)
                 throw new IllegalArgumentException("URI can't be null.");
 
-            return proxies;
-        }
+            if (NetworkUtils.isLoopbackAddress(uri))
+                return NO_PROXY.proxies;
 
-        @Override
-        public void connectFailed(URI uri, SocketAddress sa, IOException ioe) {
-            if (uri == null || sa == null || ioe == null) {
-                throw new IllegalArgumentException("Arguments can't be null.");
-            }
-        }
-
-        @Override
-        public String toString() {
-            return "SimpleProxySelector" + proxies;
+            return source.select(uri);
         }
     }
 
